--- a/qemu-virt.dts
+++ b/qemu-virt.dts
@@ -49,13 +49,14 @@
 				regions = <&allmem 0x3f>;
 				possible-harts = <&cpu0>;
 				next-arg1 = <0x0 0xbfe00000>;
-				next-addr = <0x0 0x80000000>;
+				next-addr = <0x0 0x80200000>;
 				next-mode = <0x1>;
 			};
 
 			tdomain: trusted-domain {
 				compatible = "opensbi,domain,instance";
 				regions = <&allmem 0x3f>;
+				possible-harts = <&cpu0>;
 				next-arg1 = <0x0 0x81F80000>;
 				next-addr = <0x0 0x80C00000>;
 				next-mode = <0x1>;
@@ -87,7 +88,7 @@
 			reg = <0x00>;
 			status = "okay";
 			compatible = "riscv";
-			opensbi-domain = <&udomain>;
+			opensbi-domain = <&tdomain>;
 			riscv,cboz-block-size = <0x40>;
 			riscv,cbom-block-size = <0x40>;
 			riscv,isa = "rv64imafdch_zicbom_zicboz_zicsr_zifencei_zihintpause_zawrs_zfa_zca_zcd_zba_zbb_zbc_zbs_sstc_svadu";
