--- a/qemu-virt.dts
+++ b/qemu-virt.dts
@@ -6,18 +6,9 @@
 	compatible = "riscv-virtio";
 	model = "riscv-virtio,qemu";
 
-	poweroff {
-		value = <0x5555>;
-		offset = <0x00>;
-		regmap = <0x04>;
-		compatible = "syscon-poweroff";
-	};
-
-	reboot {
-		value = <0x7777>;
-		offset = <0x00>;
-		regmap = <0x04>;
-		compatible = "syscon-reboot";
+	pmu {
+		riscv,event-to-mhpmcounters = <0x01 0x01 0x7fff9 0x02 0x02 0x7fffc 0x10019 0x10019 0x7fff8 0x1001b 0x1001b 0x7fff8 0x10021 0x10021 0x7fff8>;
+		compatible = "riscv,pmu";
 	};
 
 	fw-cfg@10100000 {
@@ -33,7 +24,7 @@
 	};
 
 	chosen {
-		rng-seed = <0x46a9c1c 0xbd0214c8 0xb4c31c74 0xa808b9b2 0x50cb0d36 0x9aa9f04b 0x36ab14cc 0x835da7b>;
+		rng-seed = <0xf3be4b97 0xd3ad7c11 0x1a90e7e4 0x4e417392 0x2605248c 0x4e06f809 0xefaef711 0xa07d97b1>;
 		stdout-path = "/soc/serial@10000000";
 		opensbi-domains {
 			compatible = "opensbi,domain,config";
@@ -53,7 +44,7 @@
 			udomain: untrusted-domain {
 				compatible = "opensbi,domain,instance";
 				regions = <&tmem 0x0>, <&allmem 0x3f>;
-				possible-harts = <&cpu0>;
+				possible-harts = <&cpu0>, <&cpu1>;
 				next-arg1 = <0x0 0xbfe00000>;
 				next-addr = <0x0 0x80200000>;
 				next-mode = <0x1>;
@@ -62,7 +53,7 @@
 			tdomain: trusted-domain {
 				compatible = "opensbi,domain,instance";
 				regions = <&allmem 0x3f>;
-				possible-harts = <&cpu0>;
+				possible-harts = <&cpu0>, <&cpu1>;
 				next-arg1 = <0x0 0x81F80000>;
 				next-addr = <0x0 0x80C00000>;
 				next-mode = <0x1>;
@@ -70,8 +61,22 @@
 		};
 	};
 
+	poweroff {
+		value = <0x5555>;
+		offset = <0x00>;
+		regmap = <0x06>;
+		compatible = "syscon-poweroff";
+	};
+
+	reboot {
+		value = <0x7777>;
+		offset = <0x00>;
+		regmap = <0x06>;
+		compatible = "syscon-reboot";
+	};
+
 	platform-bus@4000000 {
-		interrupt-parent = <0x03>;
+		interrupt-parent = <0x05>;
 		ranges = <0x00 0x00 0x4000000 0x2000000>;
 		#address-cells = <0x01>;
 		#size-cells = <0x01>;
@@ -89,9 +94,29 @@
 		timebase-frequency = <0x989680>;
 
 		cpu0: cpu@0 {
-			phandle = <0x01>;
+			phandle = <0x03>;
 			device_type = "cpu";
 			reg = <0x00>;
+			status = "okay";
+			compatible = "riscv";
+			opensbi-domain = <&tdomain>;
+			riscv,cboz-block-size = <0x40>;
+			riscv,cbom-block-size = <0x40>;
+			riscv,isa = "rv64imafdch_zicbom_zicboz_zicsr_zifencei_zihintpause_zawrs_zfa_zca_zcd_zba_zbb_zbc_zbs_sstc_svadu";
+			mmu-type = "riscv,sv57";
+
+			interrupt-controller {
+				#interrupt-cells = <0x01>;
+				interrupt-controller;
+				compatible = "riscv,cpu-intc";
+				phandle = <0x04>;
+			};
+		};
+
+		cpu1: cpu@1 {
+			phandle = <0x01>;
+			device_type = "cpu";
+			reg = <0x01>;
 			status = "okay";
 			compatible = "riscv";
 			opensbi-domain = <&tdomain>;
@@ -113,6 +138,10 @@
 			cluster0 {
 
 				core0 {
+					cpu = <0x03>;
+				};
+
+				core1 {
 					cpu = <0x01>;
 				};
 			};
@@ -125,35 +154,30 @@
 		compatible = "simple-bus";
 		ranges;
 
-		test@100000 {
-			phandle = <0x04>;
-			reg = <0x00 0x100000 0x00 0x1000>;
-			compatible = "sifive,test1\0sifive,test0\0syscon";
-		};
-
-		pmu {
-			riscv,event-to-mhpmcounters = <0x01 0x01 0x7fff9 0x02 0x02 0x7fffc 0x10019 0x10019 0x7fff8 0x1001b 0x1001b 0x7fff8 0x10021 0x10021 0x7fff8>;
-			compatible = "riscv,pmu";
-		};
-
 		rtc@101000 {
 			interrupts = <0x0b>;
-			interrupt-parent = <0x03>;
+			interrupt-parent = <0x05>;
 			reg = <0x00 0x101000 0x00 0x1000>;
 			compatible = "google,goldfish-rtc";
 		};
 
 		serial@10000000 {
 			interrupts = <0x0a>;
-			interrupt-parent = <0x03>;
+			interrupt-parent = <0x05>;
 			clock-frequency = <0x384000>;
 			reg = <0x00 0x10000000 0x00 0x100>;
 			compatible = "ns16550a";
 		};
 
+		test@100000 {
+			phandle = <0x06>;
+			reg = <0x00 0x100000 0x00 0x1000>;
+			compatible = "sifive,test1\0sifive,test0\0syscon";
+		};
+
 		pci@30000000 {
 			interrupt-map-mask = <0x1800 0x00 0x00 0x07>;
-			interrupt-map = <0x00 0x00 0x00 0x01 0x03 0x20 0x00 0x00 0x00 0x02 0x03 0x21 0x00 0x00 0x00 0x03 0x03 0x22 0x00 0x00 0x00 0x04 0x03 0x23 0x800 0x00 0x00 0x01 0x03 0x21 0x800 0x00 0x00 0x02 0x03 0x22 0x800 0x00 0x00 0x03 0x03 0x23 0x800 0x00 0x00 0x04 0x03 0x20 0x1000 0x00 0x00 0x01 0x03 0x22 0x1000 0x00 0x00 0x02 0x03 0x23 0x1000 0x00 0x00 0x03 0x03 0x20 0x1000 0x00 0x00 0x04 0x03 0x21 0x1800 0x00 0x00 0x01 0x03 0x23 0x1800 0x00 0x00 0x02 0x03 0x20 0x1800 0x00 0x00 0x03 0x03 0x21 0x1800 0x00 0x00 0x04 0x03 0x22>;
+			interrupt-map = <0x00 0x00 0x00 0x01 0x05 0x20 0x00 0x00 0x00 0x02 0x05 0x21 0x00 0x00 0x00 0x03 0x05 0x22 0x00 0x00 0x00 0x04 0x05 0x23 0x800 0x00 0x00 0x01 0x05 0x21 0x800 0x00 0x00 0x02 0x05 0x22 0x800 0x00 0x00 0x03 0x05 0x23 0x800 0x00 0x00 0x04 0x05 0x20 0x1000 0x00 0x00 0x01 0x05 0x22 0x1000 0x00 0x00 0x02 0x05 0x23 0x1000 0x00 0x00 0x03 0x05 0x20 0x1000 0x00 0x00 0x04 0x05 0x21 0x1800 0x00 0x00 0x01 0x05 0x23 0x1800 0x00 0x00 0x02 0x05 0x20 0x1800 0x00 0x00 0x03 0x05 0x21 0x1800 0x00 0x00 0x04 0x05 0x22>;
 			ranges = <0x1000000 0x00 0x00 0x00 0x3000000 0x00 0x10000 0x2000000 0x00 0x40000000 0x00 0x40000000 0x00 0x40000000 0x3000000 0x04 0x00 0x04 0x00 0x04 0x00>;
 			reg = <0x00 0x30000000 0x00 0x10000000>;
 			dma-coherent;
@@ -166,67 +190,67 @@
 			#address-cells = <0x03>;
 		};
 
-		virtio_mmio@1001e000 {
+		virtio_mmio@10008000 {
 			interrupts = <0x08>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x1001e000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10008000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@1001d000 {
+		virtio_mmio@10007000 {
 			interrupts = <0x07>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x1001d000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10007000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@1001c000 {
+		virtio_mmio@10006000 {
 			interrupts = <0x06>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x1001c000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10006000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@1001b000 {
+		virtio_mmio@10005000 {
 			interrupts = <0x05>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x1001b000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10005000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@1001a000 {
+		virtio_mmio@10004000 {
 			interrupts = <0x04>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x1001a000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10004000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@10019000 {
+		virtio_mmio@10003000 {
 			interrupts = <0x03>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x10019000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10003000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@10018000 {
+		virtio_mmio@10002000 {
 			interrupts = <0x02>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x10018000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10002000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
-		virtio_mmio@10017000 {
+		virtio_mmio@10001000 {
 			interrupts = <0x01>;
-			interrupt-parent = <0x03>;
-			reg = <0x00 0x10017000 0x00 0x1000>;
+			interrupt-parent = <0x05>;
+			reg = <0x00 0x10001000 0x00 0x1000>;
 			compatible = "virtio,mmio";
 		};
 
 		plic@c000000 {
-			phandle = <0x03>;
+			phandle = <0x05>;
 			riscv,ndev = <0x5f>;
 			reg = <0x00 0xc000000 0x00 0x600000>;
-			interrupts-extended = <0x02 0x0b 0x02 0x09>;
+			interrupts-extended = <0x04 0x0b 0x04 0x09 0x02 0x0b 0x02 0x09>;
 			interrupt-controller;
 			compatible = "sifive,plic-1.0.0\0riscv,plic0";
 			#address-cells = <0x00>;
@@ -234,7 +258,7 @@
 		};
 
 		clint@2000000 {
-			interrupts-extended = <0x02 0x03 0x02 0x07>;
+			interrupts-extended = <0x04 0x03 0x04 0x07 0x02 0x03 0x02 0x07>;
 			reg = <0x00 0x2000000 0x00 0x10000>;
 			compatible = "sifive,clint0\0riscv,clint0";
 		};
